--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://githubs.com/JuliaJuh/agendamanicure"
+    "url": "https://github.com/JuliaJuh/agendamanicure.git"
   },
   "author": "JULIF <JULIF@bndes.gov.br>",
   "license": "ISC"
