--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "typescript": "^2.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jquery": "^2.0.42"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
